# chromapath

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/compute/: raytracing.glsl
shaders/rt/: closesthit.glsl  intersection.glsl  miss.glsl  raygen.glsl
src/: camera.rs  cli.rs  gpu_compute.rs  gpu_hardware_rt.rs  hittable.rs  interval.rs  lib.rs  logger.rs  main.rs  material.rs  output.rs  random.rs  ray.rs  shaders.rs  sphere.rs
